cambiar opacidad mapa admin

--- a/ux/html/admin.html
+++ b/ux/html/admin.html
@@ -387,7 +387,8 @@
                 var heatmap = new google.maps.visualization.HeatmapLayer({
                 data: poluzone,
                 maxIntensity: 1243,
-                radius: 60
+                radius: 60,
+                opacity: 0.3 // Número entre 0 y 1
                 });
                 heatmap.setMap(getMap());
         });
