pantalla de carga mapa

--- a/ux/html/index.html
+++ b/ux/html/index.html
@@ -114,6 +114,9 @@
 
     <section class="page-section container-fluid pt-7" id="mapa">
         <div class="map" id="map">
+            <div style="text-align:center" class="card pt-4">Cargando...
+                <img src="../images/loader.gif" class="center w-50 mx-auto">
+            </div>
         </div>
         <div class="container-fluid leyenda_mapa mt-3" id="leyenda_mapa">
             <div class="row">
@@ -131,18 +134,21 @@
                                 <div class="form-check form-check-inline" onclick="cambiarEstadoCO()">
                                     <input class="form-check-input" type="checkbox" id="inlineCheckboxCO"
                                         value="option1">
-                                    <label class="form-check-label" for="inlineCheckboxCO">Monóxido de carbono</label>
+                                    <label class="form-check-label" for="inlineCheckboxCO">Monóxido de
+                                        carbono</label>
                                 </div>
                                 <div class="form-check form-check-inline" onclick="cambiarEstadoNOX()">
                                     <input class="form-check-input" type="checkbox" id="inlineCheckboxNOX"
                                         value="option2">
-                                    <label class="form-check-label" for="inlineCheckboxNOX">Óxidos de nitrógeno</label>
+                                    <label class="form-check-label" for="inlineCheckboxNOX">Óxidos de
+                                        nitrógeno</label>
                                 </div>
                                 <br>
                                 <div class="form-check form-check-inline" onclick="cambiarEstadoSO2()">
                                     <input class="form-check-input" type="checkbox" id="inlineCheckboxSO2"
                                         value="option3">
-                                    <label class="form-check-label" for="inlineCheckboxSO2">Dióxido de azufre</label>
+                                    <label class="form-check-label" for="inlineCheckboxSO2">Dióxido de
+                                        azufre</label>
                                 </div>
                                 <div class="form-check form-check-inline" onclick="cambiarEstadoIrr()">
                                     <input class="form-check-input" type="checkbox" id="inlineCheckboxIrr"
