carga en mapa admin

--- a/ux/html/admin.html
+++ b/ux/html/admin.html
@@ -841,7 +841,9 @@
                     <div class="contenedorMapa shadow bg-white rounded">
 
                         <div class="mapAdmin" id="mapAdmin">
-
+                            <div style="text-align:center" class="card pt-4">Cargando...
+                                <img src="../images/loader.gif" class="center w-50 mx-auto">
+                            </div>
                         </div>
 
                     </div>
