--- a/ux/html/admin.html
+++ b/ux/html/admin.html
@@ -21,7 +21,12 @@ Modificado: 3/12/19
     <script type="text/javascript" src="../js/mapAdmin.js"></script>
 
     <!-- Libreria para descargar PDFs -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
+
+    <!-- Librerias para convertir mapa a imagen -->
+    <script src="../librerias/FileSaver.js-master/dist/FileSaver.js"></script>
+    <script src="../librerias/FileSaver.js-master/dist/FileSaver.min.js"></script>
+    <script src="../librerias/convertir_imagen_contenido-master/js/html2canvas.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
@@ -1328,15 +1333,35 @@ Modificado: 3/12/19
         Iván
         ****************************************************************************************/
         function botonPDFlicado() {
-            var doc = new jsPDF('landscape');
-            var base64DeLaImagen = toDataURL('', function(dataUrl) {
-                var imgData = dataUrl;
-                console.log("url "+dataUrl);
-                doc.addImage(imgData, 'JPEG', 10, 40, 180, 180);
-                doc.save('mapa.pdf');
+            
+            // Convertir a imagen el mapa
+            //var contenedorMapa = document.getElementsByClassName("gm-style");
+            var nombrePDF = document.getElementById("datepicker").value;
+            console.log("esaes "+nombrePDF);
+            html2canvas($(".gm-style"), {
+                useCORS: true,
+                onrendered: function(canvas) {
+                    theCanvas = canvas;
+
+                    // Convert and download as image 
+                    var dataUrl = canvas.toDataURL('image/png');
+                    downloadURI("data:" + dataUrl, nombrePDF+".png"); 
+                    //var doc = new jsPDF('landscape');
+                    //doc.addImage(myImage, 'JPEG', 10, 40, 180, 180);
+                    //doc.save('mapa.pdf');
+                }
             });
+
         }
 
+        /****************************************************************************************
+        toDataURL()
+
+        Convierte datos a Base64 para descargar la imagen del mapa en PDF
+
+        Autor desconocido
+        Implementado por Iván
+        ****************************************************************************************/
         function toDataURL(url, callback) {
             var xhr = new XMLHttpRequest();
             xhr.onload = function() {
@@ -1349,6 +1374,24 @@ Modificado: 3/12/19
             xhr.open('GET', url);
             xhr.responseType = 'blob';
             xhr.send();
+        }
+
+        /****************************************************************************************
+        String, String ->
+        downloadURI()
+
+        Descarga una foto a partir de un URL y el nombre del archivo que descargara
+
+        Autor desconocido
+        Implementado por Iván
+        ****************************************************************************************/
+        function downloadURI(uri, name) {
+            var link = document.createElement("a");
+            link.download = name;
+            link.href = uri;
+            link.click();
+            //after creating link you should delete dynamic link
+            //clearDynamicLink(link); 
         }
 
     </script>
@@ -1861,11 +1904,11 @@ Modificado: 3/12/19
                                 </script>
                             </div>
                         </div>
-                        <div class="tarjetaBotonPDF shadow bg-white rounded mb-1 p-1 mx-auto" onclick="botonPDFlicado()">
+                        <div class="tarjetaBotonPDF shadow bg-white rounded mb-1 p-1 mx-auto" id="tarjetaBotonPDF" onclick="botonPDFlicado()">
                             <img class="iconoPDF" src="../images/download.png">
                         </div>
                     </div>
-                    <div class="contenedorMapa shadow bg-white rounded">
+                    <div id="contenedorMapa" class="contenedorMapa shadow bg-white rounded">
                         <div class="mapAdmin" id="mapAdmin">
                         </div>
                     </div>
