cambiado los a TODOS para dar a entender que se borraran todos los sensores

--- a/ux/html/admin.html
+++ b/ux/html/admin.html
@@ -845,7 +845,7 @@ Modificado: 3/12/19
             if (mostrandoErrores == true) {
                 $("#modal").modal();
                 textoModal.innerHTML = "";
-                textoModal.appendChild(document.createTextNode("Vas a BORRAR los SENSORES de la lista de SENSORES ERRÓNEOS."));
+                textoModal.appendChild(document.createTextNode("Vas a BORRAR TODOS los SENSORES de la lista de SENSORES ERRÓNEOS."));
                 botonModal.innerHTML = "";
                 botonModal.appendChild(document.createTextNode("BORRAR"));
             } else {
