--- a/ux/html/index.html
+++ b/ux/html/index.html
@@ -236,20 +236,9 @@
                         <img class="col-lg-6 d-none d-lg-inline" src="../images/imagen_BLExD.jpg" width="20">
                         <div class="px-4 col-lg-6 my-lg-auto mt-2">
                             <p class="text-justify">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut
-                                labore
-                                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                laboris
-                                nisi
-                                ut
-                                aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                                velit
-                                esse
-                                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                                sunt
-                                in
-                                culpa qui officia deserunt mollit anim id est laborum.
+                                Ofrecer a todo ciudadano la información necesaria respecto a la calidad del aire que respiramos día a día,
+                                junto con los contaminantes a los que estamos expuestos en todo momento. Con la tecnología más avanzada y sostenible
+                                para nuestro planeta.
                             </p>
                             <a class="btn btn-primary text-uppercase font-weight-bold mt-3" href="#contact"
                                 data-toggle="modal" data-target="#contacto">+ INFORMACIÓN</a>
@@ -302,10 +291,8 @@
             </div>
         </div>
         <div class="container mt-5">
-            <h5>Somos un grupo de jóvenes emprendedores que trabajamos con metodología ágil (scrum). Lorem ipsum
-                dolor sit amet, consectetur adipiscing elit. Morbi nec eros ac orci tristique pellentesque. Aliquam
-                dignissim sit amet mauris et ullamcorper. Duis eu nisl sit amet turpis porta faucibus ullamcorper
-                sit amet magna.
+            <h5>Somos un grupo de jóvenes emprendedores que trabajamos con metodología ágil (scrum). Decididos a mejorar con nuestra tecnológia y mano de obra
+            la vida en nuestro planeta. Buscando solución a aquellos problemas diarios, y no tan diarios que podrían hacernos la vida más facíl si los solucionaramos.
             </h5>
         </div>
 
