abrir index en una nueva pestaña

--- a/ux/html/admin.html
+++ b/ux/html/admin.html
@@ -1475,7 +1475,7 @@ Modificado: 3/12/19
             <!-- Navigation -->
             <nav class="navbar navbar-expand-lg navbar-dark fixed-top fondoOscuro navbar-shrink8" id="darkNav">
                 <div class="container">
-                    <a class="navbar-brand js-scroll-trigger nunito" href="index.html"><img src="../images/earth.png" width="30" alt=""> Poluzone</a>
+                    <a class="navbar-brand js-scroll-trigger nunito" target="_blank" href="index.html"><img src="../images/earth.png" width="30" alt=""> Poluzone</a>
                     <a class="navbar-toggler navbar-toggler-right nunito" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="material-icons">
                             menu
