añadir información adicional

--- a/ux/html/index.html
+++ b/ux/html/index.html
@@ -199,6 +199,60 @@
                 </div>
             </div>
         </div>
+
+        <div class="container download-app rounded shadow">
+            <div class="row">
+                <div class="col-6">
+                    <p>
+                        <h3>Monóxido de carbono (CO)</h3>El monóxido de carbono, también denominado óxido de carbono (II),
+                        gas
+                        carbonoso y
+                        anhídrido carbonoso (los dos últimos cada vez más en desuso), cuya fórmula química es CO, es un
+                        gas
+                        incoloro y altamente tóxico. Se produce por la combustión deficiente de sustancias como gas,
+                        gasolina,
+                        queroseno, carbón, petróleo, tabaco o madera. 55 mg/m³ (50 ppm) – TLV-TWA. <br>TLV-TWA:
+                        concentración
+                        correspondiente a un día normal de 8 horas o una semana de 40 horas en la que los
+                        trabajadores pueden estar expuestos sin mostrar efectos adversos.
+                    </p>
+                </div>
+
+                <div class="col-6">
+                    <p>
+                        <h3>Óxidos de nitrógeno (NOX)</h3>El dióxido de nitrógeno, uno de los óxidos de nitrógeno, es de color
+                        marrón-amarillento. Se forma como subproducto en los procesos de combustión a altas
+                        temperaturas, como en los vehículos motorizados y las plantas eléctricas. Por ello es un
+                        contaminante frecuente en zonas urbanas. Es un gas tóxico, irritante y precursor de la formación
+                        de partículas de nitrato. Estas llevan a la producción de ácido y elevados niveles de PM-2.5 en
+                        el ambiente. Afecta principalmente al sistema respiratorio.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <p>
+                        <h3>Dióxido de azufre (SO2)</h3>El dióxido de azufre es un gas incoloro que, en altas concentraciones
+                        tiene un olor fuerte
+                        y penetrante que produce irritación de ojos y vías respiratorias. Se trata de una sustancia
+                        reductora que, con el tiempo, el contacto con el aire y la humedad, se convierte en trióxido de
+                        azufre. Tiene muchas aplicaciones industriales como desinfectante, antiséptico, gas refrigerante
+                        o lejía.
+                    </p>
+                </div>
+
+                <div class="col-6">
+                    <p>
+                        <h3>Gases irritantes (IRR)</h3>Los gases respiratorios irritantes provocan una inflamación
+                        inespecífica
+                        del pulmón tras ser inhalados. Tienden a ser más hidrosolubles que los gases de mayor toxicidad
+                        para el parénquima pulmonar. Los vapores tóxicos son más peligrosos cuando tienen un umbral
+                        irritante alto; es decir, apenas hay aviso de que se está inhalando el vapor porque la
+                        irritación es escasa
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!------------------------------------------------ / Sección Mapa -------------------------------------------------------->
@@ -236,8 +290,10 @@
                         <img class="col-lg-6 d-none d-lg-inline" src="../images/imagen_BLExD.jpg" width="20">
                         <div class="px-4 col-lg-6 my-lg-auto mt-2">
                             <p class="text-justify">
-                                Ofrecer a todo ciudadano la información necesaria respecto a la calidad del aire que respiramos día a día,
-                                junto con los contaminantes a los que estamos expuestos en todo momento. Con la tecnología más avanzada y sostenible
+                                Ofrecer a todo ciudadano la información necesaria respecto a la calidad del aire que
+                                respiramos día a día,
+                                junto con los contaminantes a los que estamos expuestos en todo momento. Con la
+                                tecnología más avanzada y sostenible
                                 para nuestro planeta.
                             </p>
                             <a class="btn btn-primary text-uppercase font-weight-bold mt-3" href="#contact"
@@ -291,8 +347,10 @@
             </div>
         </div>
         <div class="container mt-5">
-            <h5>Somos un grupo de jóvenes emprendedores que trabajamos con metodología ágil (scrum). Decididos a mejorar con nuestra tecnológia y mano de obra
-            la vida en nuestro planeta. Buscando solución a aquellos problemas diarios, y no tan diarios que podrían hacernos la vida más facíl si los solucionaramos.
+            <h5>Somos un grupo de jóvenes emprendedores que trabajamos con metodología ágil (scrum). Decididos a mejorar
+                con nuestra tecnológia y mano de obra
+                la vida en nuestro planeta. Buscando solución a aquellos problemas diarios, y no tan diarios que podrían
+                hacernos la vida más facíl si los solucionaramos.
             </h5>
         </div>
 
