--- a/ux/html/index.html
+++ b/ux/html/index.html
@@ -81,6 +81,9 @@
                         <a class="nav-link js-scroll-trigger" href="#map">Mapa</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#informacion-gases">Información gases</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#app">App</a>
                     </li>
                     <li class="nav-item">
@@ -199,12 +202,19 @@
                 </div>
             </div>
         </div>
+    </section>
+    <!------------------------------------------------ / Sección Mapa -------------------------------------------------------->
+
+
+    <!------------------------------------------------ Sección Información -------------------------------------------------------->
+    <section class="page-section container-fluid pt-7" id="informacion-gases">
 
         <div class="container download-app rounded shadow">
             <div class="row">
                 <div class="col-6">
                     <p>
-                        <h3>Monóxido de carbono (CO)</h3>El monóxido de carbono, también denominado óxido de carbono (II),
+                        <h3>Monóxido de carbono (CO)</h3>El monóxido de carbono, también denominado óxido de carbono
+                        (II),
                         gas
                         carbonoso y
                         anhídrido carbonoso (los dos últimos cada vez más en desuso), cuya fórmula química es CO, es un
@@ -220,7 +230,8 @@
 
                 <div class="col-6">
                     <p>
-                        <h3>Óxidos de nitrógeno (NOX)</h3>El dióxido de nitrógeno, uno de los óxidos de nitrógeno, es de color
+                        <h3>Óxidos de nitrógeno (NOX)</h3>El dióxido de nitrógeno, uno de los óxidos de nitrógeno, es de
+                        color
                         marrón-amarillento. Se forma como subproducto en los procesos de combustión a altas
                         temperaturas, como en los vehículos motorizados y las plantas eléctricas. Por ello es un
                         contaminante frecuente en zonas urbanas. Es un gas tóxico, irritante y precursor de la formación
@@ -232,7 +243,8 @@
             <div class="row">
                 <div class="col-6">
                     <p>
-                        <h3>Dióxido de azufre (SO2)</h3>El dióxido de azufre es un gas incoloro que, en altas concentraciones
+                        <h3>Dióxido de azufre (SO2)</h3>El dióxido de azufre es un gas incoloro que, en altas
+                        concentraciones
                         tiene un olor fuerte
                         y penetrante que produce irritación de ojos y vías respiratorias. Se trata de una sustancia
                         reductora que, con el tiempo, el contacto con el aire y la humedad, se convierte en trióxido de
@@ -253,9 +265,59 @@
                 </div>
             </div>
         </div>
+        
+        <div class="container download-app rounded shadow mt-5" style="background-color: #222831;">
+            <div id="carouselExampleIndicators" class="carousel slide text-white pt-4" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <h2 class="text-center" style="color: #F88E52;">Consejos para respirar un aire más limpio
+                </h2>
+                <div class="carousel-inner">
+                    <div class="carousel-item active h-100">
+                        <div class="p-6 w-50 mx-auto rounded my-auto align-middle">
+                            <h4 class="text-center mt-3">Cómo contaminar menos</h4>En caso de los contaminantes
+                            producidos por la combustión
+                            de materiales tóxicos, como es el caso de en grandes ciudades, utilizar el transporte
+                            público, bicicleta, o patines eléctricos para minimizar la cantidad de estos
+                            componentes.
+                        </div>
+                    </div>
+                    <div class="carousel-item h-100">
+                        <div class="p-6 w-50 mx-auto rounded my-auto align-middle">
+                            <h4 class="text-center mt-3">En el trabajo</h4 class="text-center">Para aquellas personas
+                            que trabajen expuestos a
+                            componentes contaminantes aunque sea en pequeña proporción, es recomendable llevar
+                            protección, como guantes y un uniforme preparado para la ácidez de algunos gases,
+                            mascarillas para no inhalar el contaminante, y gafas protectoras para los gases más
+                            densos que puedan afectar al órgano ocular.
+                        </div>
+                    </div>
+                    <div class="carousel-item h-100">
+                        <div class="p-6 w-50 mx-auto rounded my-auto align-middle">
+                            <h4 class="text-center mt-3">En grandes ciudades</h4>En personas que convivan en ciudades
+                            con un nivel alto de
+                            contaminación es recomendable llevar una mascarilla para filtrar el aire, con la que
+                            poder respirar aire de más calidad.
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Anterior</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Siguiente</span>
+                </a>
+            </div>
+        </div>
+
     </section>
 
-    <!------------------------------------------------ / Sección Mapa -------------------------------------------------------->
+    <!------------------------------------------------ / Sección Informacion -------------------------------------------------------->
 
     <!------------------------------------------------ Sección App -------------------------------------------------------->
 
